--- a/ContosoCrafts/ContosoCrafts.csproj
+++ b/ContosoCrafts/ContosoCrafts.csproj
@@ -7,11 +7,13 @@
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="Services\" />
+    <None Remove="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="wwwroot\data\" />
     <Folder Include="Services\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\data\" />
